[package]
name = "these"
version = "2.0.0"
authors = ["FintanH <fintan.halpenny@gmail.com>"]
edition = "2018"
description = "A three-way enum capturing This, That, or Both. Inspired by the Haskell package https://hackage.haskell.org/package/these"
repository = "https://github.com/FintanH/these"
license = "GPL-3.0-or-later"

[dependencies]
